# bash-cicd-pipeline

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py  pyproject.toml
scripts/: cd.sh  ci.sh  config.sh  logging.sh  pipeline.sh
tests/: conftest.py  test_combined.py  test_deployment_api.py  test_inprocess_api.py  test_main.py
