[project]
name = "bash-cicd-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "ruff>=0.15.11",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "requests>=2.33.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
